Wrappers regenerated with updated plugin